--- a/default_config.yaml
+++ b/default_config.yaml
@@ -1,4 +1,3 @@
 server_address: "localhost:8080"
 base_url: "http://localhost:8080"
-db_file_path: ""
-db_file_name: "db.json"
+db_file_path: "./db.json"
