--- a/default_config.yaml
+++ b/default_config.yaml
@@ -1,3 +1,5 @@
 server_address: "localhost:8080"
 base_url: "http://localhost:8080"
 db_file_path: "./db.json"
+migrations_dir: "./internal/app/database/migrations"
+database_dsn: "postgres://user:zhoskiy@localhost:5432/shortner?sslmode=disable"
