--- a/default_config.yaml
+++ b/default_config.yaml
@@ -3,4 +3,6 @@ server_address: "localhost:8080"
 base_url: "http://localhost:8080"
 db_file_path: "./db.json"
 migrations_dir: "./migrations"
+cert_file: ""
+key_file: ""
 database_dsn: "postgres://user:zhoskiy@localhost:5432/shortner?sslmode=disable"
