--- a/internal/app/config/default_config.yaml
+++ b/internal/app/config/default_config.yaml
@@ -3,3 +3,4 @@ base_url: "http://localhost:8080"
 db_file_path: "./db.json"
 migrations_dir: "./migrations"
 database_dsn: "postgres://user:zhoskiy@localhost:5432/shortner?sslmode=disable"
+grpc_address: "localhost:8000"
